--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -15,10 +15,11 @@ resources:
       ref: main
       endpoint: 'io-azure-devops-github-ro'
 
-
-    - stage: BuildschedulerService
+stages:
+    - stage: BuildpagopaEcommerceCommons
+      dependsOn: []
       jobs: 
-        - job: make_build_pagopa_ecommerce_commons     
+        - job: make_buildpagopaEcommerceCommons 
           steps:
             - task: Cache@2
               inputs:
@@ -29,6 +30,18 @@ resources:
                 path: $(MAVEN_CACHE_FOLDER)
               displayName: Cache Maven local repo
             - checkout: pagopaEcommerceCommons
+            - task: SonarCloudPrepare@1
+              displayName: 'Prepare SonarCloud analysis configuration'
+              inputs:
+                SonarCloud: '$(SONARCLOUD_SERVICE_CONN)'
+                organization: '$(SONARCLOUD_ORG)'
+                scannerMode: Other
+                extraProperties: |
+                  sonar.projectKey=$(SONARCLOUD_PROJECT_KEY)
+                  sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
+                  sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
+                  sonar.junit.reportPaths=target/surefire-reports/
+  
             - task: Maven@3
               inputs:
                 mavenPomFile: 'pom.xml'
@@ -40,8 +53,23 @@ resources:
                 testResultsFiles: '**/surefire-reports/TEST-*.xml'
                 goals: 'clean verify'
                 sonarQubeRunAnalysis: true
-
-        - job: make_build_pagopa_ecommerce_scheduler_service     
+  
+            - task: SonarCloudPublish@1
+              displayName: 'Publish SonarCloud results on build summary'
+              inputs:
+                pollingTimeoutSec: '300'
+  
+            - task: PublishCodeCoverageResults@1
+              inputs:
+                codeCoverageTool: 'JaCoCo'
+                summaryFileLocation: 'target/site/jacoco/jacoco.xml'
+                reportDirectory: 'target/site/jacoco'
+              displayName: 'Publish Code Coverage on Azure Devops'
+      
+    - stage: BuildschedulerService
+      dependsOn: [BuildpagopaEcommerceCommons]
+      jobs: 
+        - job: make_buildschedulerService
           steps:
             - task: Cache@2
               inputs:
@@ -62,7 +90,7 @@ resources:
                   sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
                   sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
                   sonar.junit.reportPaths=target/surefire-reports/
-
+  
             - task: Maven@3
               inputs:
                 mavenPomFile: 'pom.xml'
@@ -74,16 +102,15 @@ resources:
                 testResultsFiles: '**/surefire-reports/TEST-*.xml'
                 goals: 'clean verify'
                 sonarQubeRunAnalysis: true
-
+  
             - task: SonarCloudPublish@1
               displayName: 'Publish SonarCloud results on build summary'
               inputs:
                 pollingTimeoutSec: '300'
-
+  
             - task: PublishCodeCoverageResults@1
               inputs:
                 codeCoverageTool: 'JaCoCo'
                 summaryFileLocation: 'target/site/jacoco/jacoco.xml'
                 reportDirectory: 'target/site/jacoco'
               displayName: 'Publish Code Coverage on Azure Devops'
-
