--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -89,8 +89,10 @@ microservice-chart:
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
     MONGO_SSL_ENABLED: "true"
-    ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopadweuecommercesa
-    ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopadweuecommercesa.queue.core.windows.net/pagopadweuecommercesa
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME: pagopadweuecommercetrsa
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT: https://pagopadweuecommercetrsa.queue.core.windows.net/pagopadweuecommercetrsa
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ACCOUNT_NAME: pagopadweuecommercedlsa
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ENDPOINT: https://pagopadweuecommercedlsa.queue.core.windows.net/pagopadweuecommercedlsa
     REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
     REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
     CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "30"
@@ -105,10 +107,12 @@ microservice-chart:
     SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
   envSecret:
-    ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_KEY: ecommerce-storage-deadletter-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
-    QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
+    QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
+    QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
