--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -34,8 +34,10 @@ microservice-chart:
       MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
       MONGO_PORT: "10255"
       MONGO_SSL_ENABLED: "true"
-      ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopapweuecommercesa
-      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopapweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
+      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME: pagopapweuecommercetrsa
+      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT: https://pagopapweuecommercetrsa.queue.core.windows.net/pagopauweuecommercetrsa
+      ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ACCOUNT_NAME: pagopapweuecommercedlsa
+      ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ENDPOINT: https://pagopapweuecommercedlsa.queue.core.windows.net/pagopauweuecommercedlsa
       REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
       REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
       CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "30"
@@ -53,10 +55,12 @@ microservice-chart:
       SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
       SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
     envSecret:
-      ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
+      ECOMMERCE_STORAGE_DEADLETTER_QUEUE_KEY: ecommerce-storage-deadletter-account-key
       MONGO_PASSWORD: mongo-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
-      QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
+      QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
+      QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
       NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
       PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
       ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
@@ -142,8 +146,10 @@ microservice-chart:
     MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
     MONGO_SSL_ENABLED: "true"
-    ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopapweuecommercesa
-    ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopapweuecommercesa.queue.core.windows.net/pagopapweuecommercesa
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME: pagopapweuecommercetrsa
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT: https://pagopapweuecommercetrsa.queue.core.windows.net/pagopapweuecommercetrsa
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ACCOUNT_NAME: pagopapweuecommercedlsa
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ENDPOINT: https://pagopapweuecommercedlsa.queue.core.windows.net/pagopapweuecommercedlsa
     REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
     REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
     CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "30"
@@ -161,10 +167,12 @@ microservice-chart:
     SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
   envSecret:
-    ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+    ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
+    ECOMMERCE_STORAGE_DEADLETTER_QUEUE_KEY: ecommerce-storage-deadletter-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
-    QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
+    QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
+    QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
