--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QU
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.transient.connectionstring=${QUEUE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.deadletter.name=${TRANSACTIONS_DEAD_LETTER_QUEUE_NAME}
-azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
+azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
 
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
 spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME}
