feat(tracing): add tracing to `TransactionNotificationsRetryQueueConsumer`

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
 azurestorage.queues.transientQueues.ttlSeconds=${TRANSIENT_QUEUES_TTL_SECONDS:604800}
 azurestorage.queues.deadLetterQueue.ttlSeconds=${DEAD_LETTER_QUEUE_TTL_SECONDS:-1}
 
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY}
 spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME}
 spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT}
