--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
 			<artifactId>opentelemetry-semconv</artifactId>
 			<version>1.27.0-alpha</version>
 		</dependency>
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-core-tracing-opentelemetry</artifactId>
+			<version>1.0.0-beta.36</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
