--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -6,19 +6,23 @@
 
 parameters:
   - name: 'DEV_DEPLOY'
-    displayName: 'DEV deployment without release'
+    displayName: 'Deploy on DEV environment'
     type: boolean
     default: True
     values:
       - False
       - True
   - name: 'UAT_PROD_DEPLOY'
-    displayName: 'UAT blue/green deployment with release --> approval for PROD blue/green deployment'
+    displayName: 'Deploy on UAT environment with PROD promotion'
     type: boolean
     default: False
     values:
       - False
       - True
+  - name: 'skipBuild'
+    displayName: 'Check this flag to skip build and proceed to deploy a docker image previously built'
+    type: boolean
+    default: false
   - name: 'RELEASE_SEMVER'
     displayName: 'When packing a release, define the version bump to apply (release is done automatically when deploying on UAT and skipped on DEV) '
     type: string
@@ -27,7 +31,7 @@ parameters:
       - minor
       - patch
       - none
-    default: none
+    default: patch
   - name: 'RELEASE_CHART_SEMVER'
     displayName: 'When upgrading helm chart, define the version bump to apply'
     type: string
@@ -35,8 +39,7 @@ parameters:
       - major
       - minor
       - patch
-      - none
-    default: none
+    default: patch
   - name: "FORCE_REPLACE_DOCKER_IMAGE"
     displayName: "Force the existing docker image to be replaced (latest tag)"
     type: boolean
@@ -59,14 +62,7 @@ parameters:
       - False
       - True
   - name: "PROD_SKIP_BLUE_DEPLOYMENT"
-    displayName: "Skip blue/green UAT deployment strategy: activating this parameter no blue version will be created and the pipeline proceed building and deploy artifact green version"
-    type: boolean
-    default: True
-    values:
-      - False
-      - True    
-  - name: "UAT_SKIP_MANUAL_APPROVAL"
-    displayName: "Skip the UAT manual approval check"
+    displayName: "Skip blue/green PROD deployment strategy: activating this parameter no blue version will be created and the pipeline proceed building and deploy artifact green version"
     type: boolean
     default: True
     values:
@@ -83,10 +79,12 @@ resources:
 pool:
   vmImage: ubuntu-latest
 
+# --- START Deploy DEV --- #
 stages:
+
   - stage: 'Build_for_DEV'
-    displayName: 'Build for DEV deployment'
-    condition: and(succeeded(), eq(${{parameters.DEV_DEPLOY}}, true))
+    displayName: 'Build for DEV'
+    condition: and(succeeded(), not(${{ parameters.skipBuild }}), eq(${{parameters.DEV_DEPLOY}}, true))
     jobs:
       - job: Build_docker
         displayName: Build docker with Build.SourceVersion as TAG
@@ -98,10 +96,11 @@ stages:
               DOCKER_IMAGE_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
               DOCKER_IMAGE_TAG: $(Build.SourceVersion)
               FORCE_REPLACE_DOCKER_IMAGE: ${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}
+
   - stage: 'Deploy_for_DEV'
     displayName: 'Deploy DEV'
     dependsOn: Build_for_DEV
-    condition: and(succeeded(), eq(${{parameters.DEV_DEPLOY}}, true) )
+    condition: or(succeeded(), ${{ parameters.skipBuild }}, eq(${{parameters.DEV_DEPLOY}}, true) )
     jobs:
       - deployment: "deploy"
         environment: 'DEV'
@@ -128,25 +127,22 @@ stages:
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-dev.yaml"
                     GREEN_VERSION: $(Build.SourceVersion)
-
+  # --- START Deploy UAT --- #
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
     dependsOn: [ ]
-    # condition:
-    #   and(
-    #   succeeded(),
-    #   eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-    #   or(
-    #   eq(variables['Build.SourceBranch'], 'refs/heads/main'),
-    #   and(
-    #   startsWith(variables['Build.SourceBranch'], 'refs/tags'),
-    #   endsWith(variables['Build.SourceBranch'], '-RELEASE')
-    #   )
-    #   )
-    #   )
+    condition:
+      and(
+        succeeded(),
+        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+        or(
+         eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+         startsWith(variables['Build.SourceBranch'], 'refs/tags')
+         )
+      )
     jobs:
       - job: "build"
-        displayName: 'Build UAT service beta'
+        displayName: 'Build release candidate docker image'
         steps:
           - template: templates/docker-release/template.yaml@pagopaCommons
             parameters:
@@ -166,7 +162,7 @@ stages:
       eq(${{parameters.UAT_SKIP_BLUE_DEPLOYMENT}}, False)
       )
     variables:
-      green_version: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.appVersion'] ]
+      green_app_version: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.appVersion'] ]
     jobs:
       - deployment: "Blue_deployment"
         displayName: "Blue deployment"
@@ -179,6 +175,7 @@ stages:
               steps:
                 - checkout: self
                   displayName: "Checkout"
+                - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
                   displayName: 'Setup helm microservice chart'
@@ -196,12 +193,14 @@ stages:
                     NAMESPACE: ecommerce
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-uat.yaml"
-                    GREEN_VERSION: $(green_version)
+                    GREEN_VERSION: $(green_app_version)
                     BLUE_VERSION: $(Build.SourceVersion)
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
     dependsOn: Deploy_UAT_Blue
+    variables:
+      commitUrl: $[ stageDependencies.Build_release_candidate.build.outputs['chart_current_version.commitUrl'] ]
     jobs:
       - job: Bluegreen_WaitForApproval
         displayName: Manual blue deploy approval
@@ -211,14 +210,16 @@ stages:
           - task: ManualValidation@0
             timeoutInMinutes: 4320 # 3 days
             inputs:
-              onTimeout: 'skip'
-            condition: and(succeeded(), eq(${{parameters.UAT_SKIP_MANUAL_APPROVAL}}, False))
+              notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
+              instructions: "Please approve or reject UAT blue green promotions for $(commitUrl)"
+              onTimeout: 'reject'
 
   - stage: Release
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], True) }}:
       dependsOn: Build_release_candidate
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], False) }}:
       dependsOn: Bluegreen_WaitForApproval
+      condition: succeeded()
     jobs:
       - job: make_release
         displayName: Make github release
@@ -237,19 +238,19 @@ stages:
                   semver: '${{ parameters.RELEASE_SEMVER }}'
           - template: azure-templates/chart-current-version.yml
 
-  - stage: "Release_tag_docker"
-    displayName: 'Docker tag release'
+  - stage: "tag_docker_release"
+    displayName: 'Tag Docker image to be release'
     dependsOn: Release
     condition:
       and(
       succeeded(),
-      eq(${{parameters.SKIP_RELEASE}}, False)
+      ne('${{parameters.RELEASE_SEMVER}}', 'none')
       )
     variables:
-      next_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - job: "build"
-        displayName: 'Tag Docker Blue version UAT'
+        displayName: 'Build UAT service beta'
         steps:
           - task: Docker@2
             displayName: "docker login"
@@ -262,17 +263,24 @@ stages:
               targetType: "inline"
               script: |
                 docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
-                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(next_version)
-                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(next_version)
+                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
+                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
 
   - stage: "Deploy_UAT_Green"
     displayName: 'UAT green deployment'
-    ${{ if eq(parameters['SKIP_RELEASE'], True) }}:
-      dependsOn: Release
-    ${{ if eq(parameters['SKIP_RELEASE'], False) }}:
-      dependsOn: [ Release_tag_docker,Release ]
+    dependsOn: [ tag_docker_release,Release ]
+    condition: |
+      and(
+        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+        in(dependencies.tag_docker_release.result, 'Succeeded', 'Skipped'),
+        in(dependencies.Release.result, 'Succeeded', 'Skipped'),
+        or(
+          eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+          startsWith(variables['Build.SourceBranch'], 'refs/tags')
+        )
+      )
     variables:
-      green_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - deployment: "Green_deployment"
         displayName: "Green deployment"
@@ -285,6 +293,7 @@ stages:
               steps:
                 - checkout: self
                   displayName: "Checkout"
+                - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
                   displayName: 'Setup helm microservice chart'
@@ -302,7 +311,8 @@ stages:
                     NAMESPACE: ecommerce
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-uat.yaml"
-                    GREEN_VERSION: $(green_version)
+                    GREEN_VERSION: $(app_version)
+  # --- END Deploy UAT --- #
 
   # --- START Deploy PROD --- #
   - stage: "Prod_WaitForApproval"
@@ -311,11 +321,11 @@ stages:
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-        in(dependencies.Deploy_UAT_Green.result, 'Succeeded'),
+        eq(dependencies.Deploy_UAT_Green.result, 'Succeeded'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
-      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Prod_Approval
         displayName: Manual prod deploy approval
@@ -326,7 +336,7 @@ stages:
             timeoutInMinutes: 4320 # 3 days
             inputs:
               notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
-              instructions: "Please approve or reject $(prod_version) for PROD promotions"
+              instructions: "Please approve or reject PROD promotions for release $(release_url)"
               onTimeout: 'reject'
 
   - stage: "Build_PROD_Blue"
@@ -340,7 +350,7 @@ stages:
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
-      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - job: "PROD_image"
         displayName: 'Build PROD image'
@@ -355,8 +365,8 @@ stages:
             inputs:
               targetType: "inline"
               script: |
-                docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(prod_version)
-                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(prod_version) $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
+                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version) $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
           - task: Docker@2
             displayName: "docker login for PROD"
             inputs:
@@ -379,7 +389,7 @@ stages:
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
-      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - deployment: "Blue_PROD_deployment"
         displayName: "Blue PROD deployment"
@@ -409,15 +419,22 @@ stages:
                     NAMESPACE: ecommerce
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-prod.yaml"
-                    GREEN_VERSION: $(prod_version)
+                    GREEN_VERSION: $(app_version)
                     BLUE_VERSION: $(Build.SourceVersion)
 
   - stage: "PROD_Green_WaitForApproval"
     displayName: 'PROD green approval deployment'
     ${{ if eq(parameters['PROD_SKIP_BLUE_DEPLOYMENT'], True) }}:
       dependsOn: Prod_WaitForApproval
+      condition: |
+        and(
+          eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+          eq(dependencies.Prod_WaitForApproval.result, 'Succeeded')
+        )
     ${{ if eq(parameters['PROD_SKIP_BLUE_DEPLOYMENT'], False) }}:
       dependsOn: Blue_PROD_deployment
+    variables:
+      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Bluegreen_PROD_WaitForApproval
         displayName: Manual green deploy approval
@@ -428,20 +445,20 @@ stages:
             timeoutInMinutes: 4320 # 3 days
             inputs:
               notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
-              instructions: "Please approve or reject PROD green promotions v${prod_version}"
+              instructions: "Please approve or reject PROD green promotions for release $(release_url)"
               onTimeout: 'reject'
 
   - stage: "Build_PROD_Green"
     displayName: 'PROD green Build'
     dependsOn: [ PROD_Green_WaitForApproval,Release ]
+    variables:
+      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-        in(dependencies.PROD_Green_WaitForApproval.result, 'Succeeded'),
+        eq(dependencies.PROD_Green_WaitForApproval.result, 'Succeeded'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
-    variables:
-      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
     jobs:
       - job: "PROD_image"
         displayName: 'Build PROD image'
@@ -475,7 +492,7 @@ stages:
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-        in(dependencies.Build_PROD_Green.result, 'Succeeded'),
+        eq(dependencies.Build_PROD_Green.result, 'Succeeded'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
@@ -514,25 +531,31 @@ stages:
 
   # --- START ROLLBACK PROD --- #
   - stage: "Prod_RollbackForApproval"
-    displayName: 'PROD approval ROLLBACK'
+    displayName: 'PROD ROLLBACK'
     dependsOn: [ Deploy_PROD_Green,Release ]
+    condition: |
+      and(
+        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
+        eq(dependencies.Deploy_PROD_Green.result, 'Succeeded'),
+        in(dependencies.Release.result, 'Succeeded', 'Skipped')
+      )
     variables:
-      prod_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Prod_Rollback_Approval
         displayName: Manual prod rollback approval
         pool: server
-        timeoutInMinutes: 30
         steps:
           - task: ManualValidation@0
             timeoutInMinutes: 30
             inputs:
               notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
-              instructions: "Please approve or reject $(prod_version) for PROD promotions"
+              instructions: "Please approve or reject PROD promotions for release $(release_url)"
               onTimeout: 'skip'
   - stage: "Prod_RollbackToLatestRelease"
     displayName: 'PROD rollback to the latest Release'
     dependsOn: [ Prod_RollbackForApproval ]
+    condition: succeeded()
     jobs:
       - job: Prod_Rollback
         pool:
@@ -549,4 +572,4 @@ stages:
               install: true
               waitForExecution: true
               arguments: $(K8S_IMAGE_REPOSITORY_NAME)
-  # --- START ROLLBACK PROD --- #
+# --- END ROLLBACK PROD --- #
