--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -24,6 +24,7 @@ microservice-chart:
       TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
       TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-retry-queue
       TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
+      TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-dead-letter-queue
       PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.platform.pagopa.it/payment-transactions-gateway/internal/v1
       PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
       PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
@@ -67,7 +68,7 @@ microservice-chart:
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
   image:
     repository: pagopapcommonacr.azurecr.io/pagopaecommerceeventdispatcherservice
-    tag: "0.6.13"
+    tag: "0.6.7"
     pullPolicy: Always
   livenessProbe:
     httpGet:
@@ -136,6 +137,7 @@ microservice-chart:
     TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
     TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-retry-queue
     TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
+    TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-dead-letter-queue
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.platform.pagopa.it/payment-transactions-gateway/internal/v1
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
