fix(pom): restored version for commons

--- a/pom.xml
+++ b/pom.xml
@@ -480,8 +480,8 @@
 					<skipCheckoutIfExists>false</skipCheckoutIfExists>
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
 					<scmVersionType>branch</scmVersionType>
-					<scmVersion>CHK-1674-add-pspOnUs-flag</scmVersion>
-					<goals>install -DskipTests</goals>
+					<scmVersionType>tag</scmVersionType>
+					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
 				</configuration>
 				<executions>
 					<execution>
